@@ -26,7 +26,9 @@ test_true(cos(atan(1.0))<0.708)
 test_eq(4,sqrt(16))
 test_eq(4,sqrt(17))
 test_eq(4,sqrt(24))
+test_eq(sqrt(0x7fffffff),46340)
 test_eq(4.0,sqrt(16.0))
+test_any([[int e,i; for(e=0;e<100000;e++) { i=sqrt(e); if(i*i>e || (i+1)*(i+1)<e) return e; } return -1;]],-1)
 // - floor
 test_eq(17.0,floor(17.0))
 test_eq(17.0,floor(17.1))
