@@ -6,6 +6,7 @@ Fri Nov  1 15:47:48 1996  Fredrik Hubinette  <hubbe@tymin.blarg.com>
 	* some documentation about pike internals added
 	* htmlify_docs.pike fixed to handle internal docs
 	* mpz->powm fixed
+	* modules/math/math.c: sqrt optimized
 	
 Tue Oct 29 16:12:03 1996  Fredrik Hubinette  <hubbe@tymin.blarg.com>
 
